# ShotFlow

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.zh.md  CONTRIBUTING.md  CONTRIBUTING.zh.md  Dockerfile  LICENSE  Makefile  README.ja.md  README.md  README.zh-CN.md  README.zh.md  SECURITY.md  SECURITY.zh.md  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
01_Assets/: README.md
02_Scripts/: README.md  character_bible_template.md  detailed_storyboard.md  keyframe_prompts.md  script_and_worldbuilding.md  storyboard_template.md
03_Workflows/: Flux_Character_Consistency.json  README.md  Wan22_Dual_Expert_Video.json  comfyui_node_connections.md  node_dependencies.md  workflows.yaml
04_SOP/: README.md  audio_production.md  postproduction.md  sop_shotflow.md
05_Output/: README.md
06_Research/: README.md  backup_and_versioning.md  failure_cases.md  hardware_and_software_checklist.md  licensing_compliance.md  parameter_tuning.md  phase1_cross_check.md  qa_and_blind_test.md  release_platforms.md  tech_stack_and_budget.md
07_Team/: README.md  collaboration_tools_guide.md  expert_team.md  roles.md
08_Automation/: README.md  README.zh.md  asset_dashboard.py  batch_keyframe_gen.py  benchmark.py  check_doc_links.py  common.py  daily_brief.py  deploy_comfyui.sh  elevenlabs_tts_api.py  init_git.sh  kling_video_api.py  package_workflows.sh  preflight_check.py  project_health_check.py  render_queue.py  (+6 more)
(+256 files in other folders)
